fix button bg not white on IE;
oh no, CSS animation on Chrome is not working: Chrome sucks!

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ footer {
     box-shadow:0 0 1em #999;
 }
 button {
-    background: inherit;
+    background: #fff;
     font: inherit;
     font-size: .7em;
     box-shadow:0 0 1em #CCC;
